intégration API Platform et test sur Postman

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,7 @@
 security:
     encoders:
         App\Entity\User:
-            algorithm: auto
+            algorithm: bcrypt
 
     role_hierarchy:    
         ROLE_ADMIN: ROLE_USER
